<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signIn_backgroundColor"
    tools:context=".SignIn"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayoutSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_background"
            android:backgroundTintMode="screen"
            android:paddingBottom="110dp"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:padding="10dp"
                    android:text="@string/sign_in_label"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signin_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/signIn_viewBackgroundColor"
                    android:drawableLeft="@drawable/ic_email_20dp"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart" />

                <EditText
                    android:id="@+id/signin_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/signIn_viewBackgroundColor"
                    android:drawableLeft="@drawable/ic_lock_20dp"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/pw_hint"
                    android:inputType="textPassword"
                    android:textAlignment="textStart" />

                <Button
                    android:id="@+id/sign_inBtn"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="10dp"
                    android:text="@string/sign_in_signInButton"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgotPw"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="14dp"
                    android:clickable="true"
                    android:text="@string/sign_in_forgotPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="328dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/sign_in_havAccMsg"
                android:textAllCaps="true"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/createNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="@string/sign_in_createNewAccountButton"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>