<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_fragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_list_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/add_new_list_title"
        android:textAlignment="center"
        android:textColor="@color/new_list_title_textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_list_name"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/new_list_colorPicker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/select_list_color"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:ems="10"
        android:paddingLeft="10dp"
        android:clickable="true"
        android:drawableStart="@drawable/ic_paint_dot"
        android:drawablePadding="3dp"
        android:background="@drawable/list_dialog_btn_gard_default"/>

</LinearLayout>