<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <toan.android.floatingactionmenu.FloatingActionsMenu
        android:id="@+id/fab_expand_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        app:fab_expandDirection="down"
        android:layout_margin="16dp"
        app:fab_addButtonColorNormal="@color/googleMapFabColor"
        app:fab_addButtonSize="normal"
        app:fab_labelsPosition="right"
        app:fab_menuIcon="@drawable/ic_nearby"
        app:fab_labelStyle="@drawable/submenu_fab_title_background">

        <toan.android.floatingactionmenu.FloatingActionButton
            android:id="@+id/fab_all_reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTintMode="screen"
            app:fab_colorNormal="@color/googleMap_supermarketIconColor"
            app:fab_icon="@drawable/ic_supermarket"
            app:fab_title="@string/fab_submenu_all_reminder"
            app:fab_size="mini"/>

        <toan.android.floatingactionmenu.FloatingActionButton
            android:id="@+id/fab_nearby_supermarket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTintMode="screen"
            app:fab_colorNormal="@color/googleMap_supermarketIconColor"
            app:fab_icon="@drawable/ic_supermarket"
            app:fab_title="@string/fab_submenu_supermarket_text"
            app:fab_size="mini"/>

        <toan.android.floatingactionmenu.FloatingActionButton
            android:id="@+id/fab_nearby_pharmacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTintMode="screen"
            app:fab_colorNormal="@color/googleMap_pharmacyIconColor"
            app:fab_icon="@drawable/ic_pharmacy"
            app:fab_title="@string/fab_submenu_pharmacy_text"
            app:fab_size="mini"/>

    </toan.android.floatingactionmenu.FloatingActionsMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>